--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
       <div id="header">
         <nav>
           <ul>
+            <li class="fork"><a href="./scripts">My Scripts</a></li>
             <li class="fork"><a href="./about">About</a></li>
             <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
           </ul>
