--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
       <div id="header">
         <nav>
           <ul>
-            <li class="fork"><a href="./resources">Resources</a></li>
-            <li class="fork"><a href="./scripts">My Scripts</a></li>
-            <li class="fork"><a href="./about">About</a></li>
-            <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./resources">Resources</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./scripts">My Scripts</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./about">About</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="{{ site.github.repository_url }}">View On GitHub</a></li>
           </ul>
         </nav>
       </div><!-- end header -->
