trying to link index page without permalink

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
       <div id="header">
         <nav>
           <ul>
+            <li class="fork"><a style="margin-right:5px;" href="./index.html">Home</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./resources">Resources</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./scripts">My Scripts</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./about">About</a></li>
