removed all permalinks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
         <nav>
           <ul>
             <li class="fork"><a style="margin-right:5px;" href="./index.html">Home</a></li>
-            <li class="fork"><a style="margin-right:5px;" href="./resources">Resources</a></li>
-            <li class="fork"><a style="margin-right:5px;" href="./scripts">My Scripts</a></li>
-            <li class="fork"><a style="margin-right:5px;" href="./about">About</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./resources.html">Resources</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./scripts.html">My Scripts</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./about.html">About</a></li>
             <li class="fork"><a style="margin-right:5px;" href="{{ site.github.repository_url }}">View On GitHub</a></li>
           </ul>
         </nav>
