created pages for 3 sections & added btns in default.html
gaming on linux, tips and tricks and ffmpeg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,12 @@
         <nav>
           <ul>
             <li class="fork"><a style="margin-right:5px;" href="./index.html">Home</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./tips-and-tricks.html">Tips & Tricks</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./gaming.html">Gaming On Linux</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./ffmpeg.html">FFMPEG</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./about.html">About</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./resources.html">Resources</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./scripts.html">My Scripts</a></li>
-            <li class="fork"><a style="margin-right:5px;" href="./about.html">About</a></li>
             <li class="fork"><a style="margin-right:5px;" href="{{ site.github.repository_url }}">View On GitHub</a></li>
           </ul>
         </nav>
