--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
         <nav>
           <ul>
             <li class="fork"><a style="margin-right:5px;" href="./index.html">Home</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./issues.html">Issues</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./tips-and-tricks.html">Tips & Tricks</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./gaming.html">Gaming On Linux</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./ffmpeg.html">FFMPEG</a></li>
