just replaced upper cases with lower cases for ffmpeg page name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <li class="fork"><a style="margin-right:5px;" href="./index.html">Home</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./issues.html">Issues</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./tips-and-tricks.html">Tips & Tricks</a></li>
-            <li class="fork"><a style="margin-right:5px;" href="./ffmpeg.html">FFMPEG</a></li>
+            <li class="fork"><a style="margin-right:5px;" href="./ffmpeg.html">Ffmpeg</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./resources.html">Resources</a></li>
             <li class="fork"><a style="margin-right:5px;" href="./scripts.html">Scripts</a></li>
             <li class="fork"><a style="margin-right:5px;" href="{{ site.github.repository_url }}">View On GitHub</a></li>
